Don't intercept Flash navigations when the current page is the Flash download page.

Currently, with HBD, if you navigate to https://get.adobe.com/flashplayer and
click "Download", it will trigger the Run Flash prompt. We should ignore
navigations if the source URL is the Flash download page itself.

BUG=656062

Review-Url: https://codereview.chromium.org/2435933002
Cr-Commit-Position: refs/heads/master@{#427005}

Former-commit-id: 4b8d85c37e5a38e8db96c9c7eeb9cad16ee3dfcb